Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -59,6 +59,8 @@
   <div>
     <dl>
       <dt>Fri 16 October 2015</dt>
+      <dd><a href="http://blog.xivo.io/automatically-disconnect-an-agent-if-inactive.html">Automatically Disconnect an Agent if his SIP Account is Inactive</a></dd>
+      <dt>Fri 16 October 2015</dt>
       <dd><a href="http://blog.xivo.io/sprint-review-1517.html">Sprint Review 15.17</a></dd>
       <dt>Wed 30 September 2015</dt>
       <dd><a href="http://blog.xivo.io/xivo-bluemind-integration.html">XiVO + Bluemind Integration</a></dd>
