--- a/index31.html
+++ b/index31.html
@@ -54,6 +54,24 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/working-isdn-prototype-board.html#working-isdn-prototype-board">Working ISDN prototype board</a></h2>
+    <p>
+      Posted on Fri 25 February 2011 in <a href="http://blog.xivo.io/category/xivo-ipbx.html">XiVO IPBX</a>
+    </p>
+  </header>
+  <div>
+      <p>This is great to show the working PCB or the ISDN prototype board
+connected to our IPBX prototype through the LEB and TDM bus of our SoC
+(INTEL Tolapai). This PCB shows the 4 T0 ports routed to the CologneChip
+XHFC-4SU. We have been cabling this PCB in a factory facility close to
+Paris with good results on the quality of the cabling for 230+ parts on
+our PCB with 4 layers.</p>
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/creating-an-independant-xivo-debian-gnulinux-repository-from-scratch-part-44.html#creating-an-independant-xivo-debian-gnulinux-repository-from-scratch-part-44">Creating an independant XiVO Debian GNU/Linux repository from scratch (part 4/4)</a></h2>
     <p>
       Posted on Tue 22 February 2011 in <a href="http://blog.xivo.io/category/xivo-ipbx.html">XiVO IPBX</a>
@@ -383,22 +401,6 @@ squeeze</a>.
 An attempt was made to buildthem for x86_64. The <a href="http://xivo.dachary.org/packaging-farm/skaro/gnulinux/debian/x86_64/squeeze/src/">result is still
 incomplete</a>
 but it should run when the last dependency problems are resolved.</p>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/xivo-is-everywhere-part-3.html#xivo-is-everywhere-part-3">XiVO is everywhere part 3 !</a></h2>
-    <p>
-      Posted on Fri 11 February 2011 in <a href="http://blog.xivo.io/category/general.html">General</a>
-    </p>
-  </header>
-  <div>
-      <p>Hello, it's cold (-15), it's winter but XiVO is always here !</p>
-<p><img alt="sylvain_xivo.png" src="/public/.sylvain_xivo_m.jpg" title="sylvain_xivo.png, fév. 2011" /></p>
-<p>Special for you Bertrand ;)</p>
-<p><img alt="IMG_20110211_144454.jpg" src="/public/.IMG_20110211_144454_m.jpg" title="IMG_20110211_144454.jpg, fév. 2011" /></p>
 </p>
   </div>
 </article>
