--- a/index38.html
+++ b/index38.html
@@ -54,6 +54,57 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/the-perfect-openhardware-lab.html#the-perfect-openhardware-lab">The perfect OpenHardware Lab</a></h2>
+    <p>
+      Posted on Tue 11 May 2010 in <a href="http://blog.xivo.io/category/hardware.html">Hardware</a>
+    </p>
+  </header>
+  <div>
+      <p>In an OpenHardware project, making up a perfect lab is crucial in order
+to prototype, test and solder parts before going to PCB pre-production
+and production.</p>
+<p>This post aims at presenting the set-up of the XiVO IPBX OpenHardware
+lab at Proformatique.</p>
+<p><strong>The main list of hardware equipment we have in our lab is:</strong></p>
+<ul>
+<li>Working-table from Langlois - Gradignan, France (typically used for
+    electronic practical session in the secondary schools and
+    engineering schools) with wooden table and neon to have a close-up
+    working light</li>
+<li>Oscilloscope Tektronix DP2012 with Ethernet interface (web server
+    running on the digital Oscilloscope that can control the settings on
+    the 2 ways)</li>
+<li>Multimeter ChauvinArnoux - CA703 (CAT IV - 600V with the diode
+    function used to validate continuity of PCB trace when looking for
+    connectivity on a PCB)</li>
+<li>Weller solder station WD1 with 2.5mm, 1mm and 0.5mm ends</li>
+<li>2 x PowerSupply PS3003 (24V in order to be able to do 48V with 2
+    power-supplies back-to-back)</li>
+<li>Zooming lens for close-ups soldering and debugging</li>
+<li>ATX PowerSupply to power motherboard and ATX-based EvaluationBoards</li>
+<li>Saleae LogicAnalyzer (USB-based and supported with <strong>sigrok</strong> with
+    Linux / http://www.sigrok.org/wiki/Main_Page for the list of
+    supported logic analyzers) for data-bus debugging</li>
+<li>Solderless breadboard SD-24 for wires connexion through the
+    breadboard</li>
+</ul>
+<p><strong>Please find below a picture of our hardware lab with the equipment
+descrived above:</strong></p>
+<p><img alt="Proformatique - XiVO - Hardware
+Lab" src="/public/.P1030609_m.jpg" title="Proformatique - XiVO - Hardware Lab, mai 2010" /></p>
+<p>This is important to get also small tools like cutting tools, small
+wires (like the precious HIRSCHMANN MKL0,64/25-0,25 - reference
+#1011430 at farnell.com
+<a href="http://fr.farnell.com/hirschmann/mkl0-64-25-0-25-red/cordon-de-test-rouge-0-64m/dp/1011430?Ntt=1011430" title="http://fr.farnell.com/hirschmann/mkl0-64-25-0-25-red/cordon-de-test-rouge-0-64m/dp/1011430?Ntt=1011430">http://fr.farnell.com/hirschmann/mk...</a>),
+soldering wires (RoHS with 1mm and 0.5mm diameter), screw-drivers, SMT
+and non SMT resistors, capacitors and selfs, labels for different wire
+description.</p>
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/prototype-pcb-for-the-isdn-and-fxofxs-interfaces.html#prototype-pcb-for-the-isdn-and-fxofxs-interfaces">Prototype PCB for the ISDN and FXO/FXS interfaces</a></h2>
     <p>
       Posted on Tue 04 May 2010 in <a href="http://blog.xivo.io/category/hardware.html">Hardware</a>
@@ -390,31 +441,6 @@ http://www.pixelache.ac/helsinki/festival-2010/programme/open-source-hardware/<b
 (2) : http://www.ohanda.org<br />
 (3) : http://www.sebruiz.net/326<br />
 (4) : http://www.gosh2009.ca/wiki/images/Ohanda_piksel.pdf</p>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/xivo-openhardware-ipbx-presented-at-solutionslinux2010-paris.html#xivo-openhardware-ipbx-presented-at-solutionslinux2010-paris">XiVO OpenHardware IPBX presented at SolutionsLinux2010, Paris</a></h2>
-    <p>
-      Posted on Mon 22 March 2010 in <a href="http://blog.xivo.io/category/hardware.html">Hardware</a>
-    </p>
-  </header>
-  <div>
-      <p><img alt="SolutionsLinux2010" src="/public/SolutionsLinux2010_logo.jpg" title="SolutionsLinux2010, mar. 2010" /></p>
-<p>It was a great pleasure to present the XiVO IPBX OpenHardware project at
-SolutionsLinux2010 (the largest Linux fair in France yearly) on last
-week and we had several discussions about the architecture choosen for
-the IPBX and the interfaces / functionnalities.</p>
-<p>We had some great feedbacks from different VoIP projects and deployment
-feedbacks that will help us understand the needs from the market.</p>
-<p>The next steps are now for the OpenHardware community, to present our
-prototyping feddbacks and the detailed architecture that we are
-targeting.</p>
-<p>Finally, we will presenting soon the work done on the potential
-OpenHardware licence that we want to use based on a mixed between
-trademarks and CreativeCommons licences.</p>
 </p>
   </div>
 </article>
