--- a/index7.html
+++ b/index7.html
@@ -54,6 +54,31 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/sprint-review-1502.html#sprint-review-1502">Sprint Review 15.02</a></h2>
+    <p>
+      Posted on Fri 30 January 2015 in <a href="http://blog.xivo.io/category/xivo-ipbx.html">XiVO IPBX</a>
+    </p>
+  </header>
+  <div>
+      <p>Here are a few links explaining what we are going to ship in XiVO 15.02:</p>
+<ul>
+<li><a href="https://projects.xivo.io/versions/218" title="https://projects.xivo.io/versions/218">Roadmap</a></li>
+</ul>
+<p>Essentially, 15.02 brings changes into the XiVO Client. Visual and
+functionnal changes.</p>
+<p>We also fixed a bug introduced in 15.01 breaking api documentation in
+xivo-dird</p>
+<p>Work of interest:</p>
+<ul>
+<li>Ongoing work on xivo-dird's integration and visual reorganisation of
+    XiVO Client</li>
+</ul>
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/linuq-groupe-utilisateur-linux-de-quebec-des-ateliers-et-xivo.html#linuq-groupe-utilisateur-linux-de-quebec-des-ateliers-et-xivo">LinuQ, Groupe Utilisateur Linux de Québec, des ateliers et XiVO</a></h2>
     <p>
       Posted on Thu 29 January 2015 in <a href="http://blog.xivo.io/category/free-software.html">Free software</a>
@@ -741,49 +766,6 @@ le site a-brest.</p>
     <a href="www.linuq.org">www.linuq.org/</a></li>
 <li>Atelier coopératif la Patente:
     <a href="http://atelierlapatente.org">http://atelierlapatente.org/</a></li>
-</ul>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/sprint-review-1501.html#sprint-review-1501">Sprint Review 15.01</a></h2>
-    <p>
-      Posted on Fri 16 January 2015 in <a href="http://blog.xivo.io/category/xivo-ipbx.html">XiVO IPBX</a>
-    </p>
-  </header>
-  <div>
-      <p>Here are a few links explaining what we are going to ship in XiVO 15.01:</p>
-<ul>
-<li><a href="https://projects.xivo.io/versions/217" title="https://projects.xivo.io/versions/217">Roadmap</a></li>
-</ul>
-<p>New features include:</p>
-<ul>
-<li>Added POPC support for Yealink T46</li>
-</ul>
-<p>We also fixed quite a few bugs</p>
-<ul>
-<li>added support for ldap username and password containing spaces</li>
-<li>fixed a missing dll error when launching XiVO Client on windows</li>
-<li>added support for ldap phone numbers starting with "+" presented in
-    the directory</li>
-<li>fixed bug that created line function keys when deleting an existing
-    function key on yealink devices</li>
-<li>fixed a spelling error in statistics interface of web interface</li>
-<li>fixed a bug preventing the display of the second queue skills rules
-    page</li>
-<li>Provisioning now works on Yealink T32/T38</li>
-<li>fixed bug : Holdtime announcement before entering the queue doesn't
-    work with some numbers</li>
-<li>fixed bug : Calls answered by the switchboard are displayed as
-    missed calls on the operator's phone</li>
-<li>Snom 7XX function keys now works with XiVO's High Avaiability</li>
-</ul>
-<p>Work of interest:</p>
-<ul>
-<li>Ongoing work on xivo-dird's integration and visual reorganisation of
-    XiVO Client</li>
 </ul>
 </p>
   </div>
