--- a/tags.html
+++ b/tags.html
@@ -61,6 +61,7 @@
           <li><a href="http://blog.xivo.io/tag/authentification.html">authentification</a> (2)</li>
           <li><a href="http://blog.xivo.io/tag/barcamp.html">barcamp</a> (1)</li>
           <li><a href="http://blog.xivo.io/tag/bsd.html">BSD</a> (1)</li>
+          <li><a href="http://blog.xivo.io/tag/call-center.html">call center</a> (1)</li>
           <li><a href="http://blog.xivo.io/tag/client.html">client</a> (2)</li>
           <li><a href="http://blog.xivo.io/tag/communautaire.html">communautaire</a> (1)</li>
           <li><a href="http://blog.xivo.io/tag/consul.html">consul</a> (2)</li>
