--- a/authors.html
+++ b/authors.html
@@ -71,6 +71,7 @@
       <li><a href="http://blog.xivo.io/author/jpgelinas.html">jpgelinas</a> (8)</li>
       <li><a href="http://blog.xivo.io/author/jylebleu.html">jylebleu</a> (9)</li>
       <li><a href="http://blog.xivo.io/author/nbouliane.html">nbouliane</a> (6)</li>
+      <li><a href="http://blog.xivo.io/author/nicolas-vdb.html">Nicolas Vdb</a> (1)</li>
       <li><a href="http://blog.xivo.io/author/pcadotte.html">pcadotte</a> (9)</li>
       <li><a href="http://blog.xivo.io/author/quintana.html">quintana</a> (12)</li>
       <li><a href="http://blog.xivo.io/author/sduthil.html">sduthil</a> (11)</li>
