--- a/index12.html
+++ b/index12.html
@@ -54,6 +54,47 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/understanding-the-xioh-label-on-our-product.html#understanding-the-xioh-label-on-our-product">Understanding the XIOH label on our product</a></h2>
+    <p>
+      Posted on Thu 14 March 2013 in <a href="http://blog.xivo.io/category/hardware.html">Hardware</a>
+    </p>
+  </header>
+  <div>
+      <p>Dear XIOH followers,</p>
+<p><strong>As we have passed the CE marking certification, we have finalized the
+label that we will have on our product with the revelant informations
+necessary to identify the product once on the market :</strong></p>
+<p><img alt="XIOH_Label" src="/public/XIOHv5/.P1070110_m.jpg" title="XIOH_Label, mar. 2013" /></p>
+<ul>
+<li><strong>"XIOH - version 5"</strong> : the name of the product and the hardware
+    version</li>
+<li><strong>"S/N : XIOH-5-1236-29"</strong> ; the serial number including the
+    hardware version (5), the production batch (1236) and the number in
+    this batch (29)</li>
+<li><strong>"AC input: 100-240V\~, 4-2A, 60-50Hz"</strong> : indication on the power
+    requirements used by our ATX 180W power supply</li>
+<li><strong>"Manufacturer :Avencall"</strong> : the name of the manufacturer (that
+    could be different is different production project)</li>
+<li><strong>"Sources : http://0001-0001.okey.ohanda.org"</strong> : the OHANDA
+    trademark is our legal umbrella for this OpenHardware
+    project/product and a direct link to the GIT repository of our
+    hardware and software files is indicated on the label. This will
+    help the customers and users getting information on the hardware,
+    contacting us and sharing information</li>
+<li><strong>"Made in France"</strong> : we are currently producing in France (i.e.
+    locally as we are based here) but we would rather talk about local
+    production to track down the carbone footprint of our product from
+    components sourcing to cabling and packaging</li>
+<li><strong>Differents logos</strong> including the "CE" (1) and RoHS process of
+    production as well as the OHANDA logo.</li>
+</ul>
+<p>(1) : http://en.wikipedia.org/wiki/CE_marking</p>
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/passing-the-ce-marking-certification-for-eu-market.html#passing-the-ce-marking-certification-for-eu-market">Passing the CE marking certification for EU market</a></h2>
     <p>
       Posted on Mon 11 March 2013 in <a href="http://blog.xivo.io/category/hardware.html">Hardware</a>
@@ -257,38 +298,6 @@ services.</p>
 <p>Thanks again to the 3 teams who participated in XIVO's pwn2own
 (RingZer0, Abed&amp;Francis and Bitducks). We look forward to more hacking
 next year !</p>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/astricon-2012.html#astricon-2012">Astricon 2012</a></h2>
-    <p>
-      Posted on Mon 05 November 2012 in <a href="http://blog.xivo.io/category/software.html">Software</a>
-    </p>
-  </header>
-  <div>
-      <p><a href="/public/Astricon2012/astricon.JPG" title="astricon.JPG"><img alt="astricon.JPG" src="/public/Astricon2012/.astricon_m.jpg" title="astricon.JPG, nov. 2012" /></a></p>
-<p>For a second year, Avencall was present on the biggest Asterisk
-conference in the world: Astricon.This year, the conference was held in
-Georgia, Atlanta.</p>
-<p>Like every year, the Monday is the AstriDevCon, a small conference for
-developers by the developers to discuss the future and how to improve
-Asterisk. It's a very nice place to get to know the other people that
-are coding inside Asterisk and also to coordinate with others about what
-has to be done.</p>
-<p>You can find a nice resume of the whole day of discussion here:
-<a href="https://wiki.asterisk.org/wiki/display/AST/AstriDevCon+2012">https://wiki.asterisk.org/wiki/display/AST/AstriDevCon+2012</a></p>
-<p>As you can see, this year we also had a booth (#28). It was a great
-experience to expose ourself at Astricon because there is a huge flow of
-people interested and interesting. It was a lot of fun to talk about the
-XiVO project and the XiVO Open Hardware. All the gizmos we had on our
-table really attracted may people, especially the raspberry pi that was
-running XiVO.</p>
-<p><a href="/public/Astricon2012/conf-xav.jpg" title="conf-xav.jpg"><img alt="conf-xav.jpg" src="/public/Astricon2012/.conf-xav_s.jpg" title="conf-xav.jpg, nov. 2012" /></a></p>
-<p>To communicate further about us, we also gave a conference to present
-Avencall and the XiVO telephony system.</p>
 </p>
   </div>
 </article>
