--- a/index4.html
+++ b/index4.html
@@ -54,6 +54,100 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/sprint-review-1511.html#sprint-review-1511">Sprint review 15.11</a></h2>
+    <p>
+      Posted on Fri 12 June 2015 in <a href="http://blog.xivo.io/category/xivo-ipbx.html">XiVO IPBX</a>
+      &#8226; Tagged with
+      <a href="http://blog.xivo.io/tag/xivo.html">XiVO</a>,      <a href="http://blog.xivo.io/tag/authentification.html">authentification</a>,      <a href="http://blog.xivo.io/tag/consul.html">consul</a>,      <a href="http://blog.xivo.io/tag/development.html">development</a>,      <a href="http://blog.xivo.io/tag/software.html">software</a>,      <a href="http://blog.xivo.io/tag/telephonie.html">téléphonie</a>,      <a href="http://blog.xivo.io/tag/web-interface.html">web-interface</a>,      <a href="http://blog.xivo.io/tag/xivo.html">xivo</a>    </p>
+  </header>
+  <div>
+      <p>This sprint we have worked on various subjects regarding REST APIs. REST
+APIs enable a more customizable and flexible management of XiVO server.
+They also enable the development of third-party features. For example,
+you could create a new management interface that would replace the
+current web interface; or you could prepare a mass-update of all the
+users on the server.</p>
+<h3>New in this sprint:</h3>
+<ul>
+<li>The fax xlet indicates whether the fax has been successfully sent
+    or not. This means that when sending a fax, you see a waiting
+    indicator, and after a few seconds, the fax xlet shows a
+    confirmation or an error message.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li>The switchboard newly supports Polycom VVX400 and VVX410. The
+    switchboard is now compatible with <a href="http://documentation.xivo.io/en/latest/administration/switchboard/switchboard.html#supported-devices" title="8 phone models">8 phone
+    models</a>
+    from Aastra, Polycom, Snom and Yealink.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li>Old call records and statistics will be automatically removed
+    (default: older than 1 year). Depending on your country, legislation
+    may restrict the period of personal data storage. Also, accumulating
+    call records and statistics is often useless and
+    degrades performances. You have the possibility of developing
+    scripts to archive call records and statistics before XiVO
+    deletes them.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li>Documentation for REST APIs are available at <a href="http://api.xivo.io">http://api.xivo.io</a>.
+    The documentation was built with
+    <a href="http://petstore.swagger.io/" title="Swagger">Swagger</a>. Swagger is a web
+    framework specifically aimed at documenting REST APIs. It also
+    allows direct interaction with the APIs via the website.</li>
+</ul>
+<h3>Also in this sprint, but more technical:</h3>
+<ul>
+<li>Asterisk updated from 11.17.0 to 11.17.1</li>
+<li>DAHDI updated from 2.10.0 to 2.10.1</li>
+</ul>
+<h3>Work done in this sprint, but not yet ready:</h3>
+<ul>
+<li>Function keys will be manageable via a REST API. This will allow
+    administrators to manage function keys more easily (creation and
+    update), by applying templates of function keys to a set of users.
+    In a more distant future, this will also allow users to manage their
+    own function keys.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li>Contacts can be bookmarked and users will be able to list their
+    bookmarked contacts. This also opens the way for personal contacts
+    to be accessible for each user from anywhere.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li>Users will be able log in their XiVO Clients using
+    LDAP authentication. This will remove the constraint for users to
+    remember one more password. It will also reduce the amount of
+    configuration needed for each user by the administrator.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li>REST APIs will be usable from anywhere, but only by
+    authorized people/services. Currently most REST APIs are only usable
+    from the XiVO server and exposing them to the outside is a bad idea.
+    So we are adding an authentication system to these APIs to protect
+    them, so that they can be exposed.</li>
+</ul>
+<p>See you for the next sprint review.</p>
+<p>Source:</p>
+<p><a href="http://projects.xivo.io/versions/227" title="15.11 Roadmap">15.11 Roadmap</a></p>
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/authentication-in-xivo.html#authentication-in-xivo">Authentication in XiVO</a></h2>
     <p>
       Posted on Mon 25 May 2015 in <a href="http://blog.xivo.io/category/software.html">Software</a>
@@ -375,53 +469,6 @@ contributeur.</p>
 <p>d-raven</p>
 <p><em>d-raven&gt; je pense que la meilleur façon de convaincre, c'est de
 montrer que çà fonctionne !!</em></p>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/sprint-review-1507.html#sprint-review-1507">Sprint Review 15.07</a></h2>
-    <p>
-      Posted on Fri 10 April 2015 in <a href="http://blog.xivo.io/category/articles.html">articles</a>
-    </p>
-  </header>
-  <div>
-      <p>Here are a few links explaining what we are going to ship in XiVO 15.07:</p>
-<ul>
-<li><a href="https://projects.xivo.io/versions/224" title="https://projects.xivo.io/versions/224">Roadmap</a></li>
-</ul>
-<p>XiVO 15.07 brings new visual and functional features and fixes a few
-bugs among which:</p>
-<ul>
-<li>The xlet services and fax has been redesigned</li>
-<li>The xlet people shows the mobile phone number</li>
-<li>Agent status in xlet people is always displayed</li>
-<li>(bug) background input in fax xlet on mac has been adjusted</li>
-<li>(bug) removed an error displayed in XiVO Client
-    (QPixmap::scaleHeight: Pixmap is a null pixmap)</li>
-<li>(bug) new fonts were not displayed if not installed locally on
-    client's system</li>
-<li>Old XiVO styles were removed</li>
-<li>Xlet conference code was refactored (in preparation of
-    upcoming redesign)</li>
-</ul>
-<p>This version also fixes 9 other bugs :</p>
-<ul>
-<li>4 bugs related to associating and de-associating lines (or
-    multiple lines) to a device</li>
-<li>2 bugs related to provisioning, setting admin/user password on
-    Polycom phones and resetting a device to autoprov when already in
-    autoprov</li>
-<li>2 bugs related to xivo-upgrade, queue periodic-announce is not lost
-    anymore when upgrading and an upgrade error when upgrading from
-    13.25</li>
-<li>it is now possible to dial a conference room begining with 0 from
-    the xivo client</li>
-</ul>
-<p>We also included a new Asterisk version 11.17.0 and added a new tutorial
-to the contributions section.</p>
-<p>Enjoy! ;)</p>
 </p>
   </div>
 </article>
